--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         <section class="home" id="home">
             <div class="home-section">
                 <div class="profile">
-                    <!-- profile image -->
+                    <!-- profile image (dp)-->
                 </div>
                 <div class="info">
                     <h2>Hello, My name is Shaurya kumar</h2>
