--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
         </section>
     </main>
-    <script src="portfolio.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
