--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
                     <img src="image/react-js.png" alt="react-js-logo">
                     <p class="skill-item-text">React js</p>
                 </div>
+                <div class="skill-item">
+                    <img src="image/github.jpeg" alt="github logo">
+                    <p class="skill-item-text">GitHub</p>
+                </div>
             </div>
         </section>
         <section id="project" class="project">
