Update resume download

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                         software projects that solve real problems.</p>
                     <div class="contact-resume">
                         <div class="resume-btn">
-                            <button id="downloadCV">Download CV</button>
+                            <a href="resume/Shaurya_kumar_resume.pdf" download="Shaurya_kumar_resume.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                <button id="downloadCV">Download CV</button>
+                            </a>
                         </div>
                         <div class="contact-btn">
                             <a href="#contact" class="contact-about">Contact Me</a>
